Now its personalized

--- a/index.html
+++ b/index.html
@@ -8,40 +8,6 @@
      <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
      <script src="script.js" defer></script>
      
-    <style>
-            @font-face {
-            font-family: GraphikLight;
-            src: url(Graphik-Light-Trial.otf);
-            }
-            @font-face {
-            font-family: GraphikMedium;
-            src: url(Graphik-Medium-Trial.otf);
-            }
-            @font-face {
-            font-family: GraphikRegular;
-            src: url(Graphik-Regular-Trial.otf);
-            }
-            @font-face {
-            font-family: GraphikSemiBold;
-            src: url(Graphik-Semibold-Trial.otf);
-            }
-            @font-face {
-            font-family: GraphikBold;
-            src: url(Graphik-Bold-Trial.otf);
-            }
-            @font-face {
-            font-family: GraphikBlack;
-            src: url(Graphik-Black-Trial.otf);
-            }
-            @font-face {
-            font-family: NanumPet;
-            src: url(NanumPenScript-Regular.ttf);
-            }
-            @font-face {
-            font-family: MontserratBold;
-            src: url(Montserrat-Bold.otf);
-            }
-    </style>
 </head> 
 
     <body>
@@ -73,7 +39,7 @@
             <div class="main-info-container">
 
                <div id="main-info" class="main-info">
-                    <h1>Hi! <span class="modal-display-name">NAME</span> <br> <span>My name is Galo</span> </h1>
+                    <h1>Hi !<br> <span>My name is Galo</span> </h1>
                 </div> 
 
                 <div class="wrapper">
@@ -212,7 +178,7 @@
 
         </footer>
 
-        <form id="modal-form">
+        <form id="consent-form">
 
         <div class="modal" id="modal">
            
