Updated the web info

--- a/index.html
+++ b/index.html
@@ -69,12 +69,11 @@
             <div class="about-container">
 
             <div class="about-info">
-                <p class="about-description">Hello! My name is <span class="about-name">Galo Vega</span> I enjoy creating clean and beautiful websites. 
-                   My interest in web development started back in 2021 when I started to create UI/UX designs as hobbie.</p>
+                <p class="about-description">Hello! My name is <span class="about-name">Galo Vega</span> I enjoy creating clean and beautiful websites with outstanding UIs/UXs. My interest in web development started back in 2021 when I started studying graphic design. Then in the year 2022 I started to study web development to be able to bring my ideas to reality and help others to do it. </p>
                 <p class="about-subtitle">Frontend</p>
-                <p class="about-description">I craft beautiful websites using HTML, CSS, JavaScript, React using clean, elegant and efficient code.</p>
+                <p class="about-description">I craft beautiful websites using HTML, CSS and JavaScript using clean, elegant and efficient code.</p>
                 <p class="about-subtitle">Design</p>
-                <p class="about-description">I design clean and user friendly UI and UX, with creativity and Innovation.</p>
+                <p class="about-description">I design clean and user friendly UIs and UXs, that adapt to your and your customers' needs.</p>
             </div>
 
             <div class="about-img">
@@ -93,7 +92,7 @@
                 
                 <div class="project-article">
                     <p class="project-title">Ecommerce</p>
-                    <p class="project-description">Here goes the description of the project, what Im able to do and what I did in that ocasion, explain that clearly</p>
+                    <p class="project-description">Soon...</p>
                     <span class="fa-stack fa-3x">
                         <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i>
                         <i class="fa-solid fa-solid fa-shop fa-stack-1x fa-inverse" id="project-icon"></i>
@@ -102,7 +101,7 @@
                 </div>
                 <div class="project-article">
                     <p class="project-title">Blog</p>
-                    <p class="project-description">Here goes the description of the project, what Im able to do and what I did in that ocasion, explain that clearly</p>
+                    <p class="project-description">Soon...</p>
                     <span class="fa-stack fa-3x">
                         <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i>
                         <i class="fa-solid fa-solid fa-newspaper fa-stack-1x fa-inverse" id="project-icon"></i>
@@ -111,7 +110,7 @@
                 </div>
                 <div class="project-article">
                     <p class="project-title">Business</p>
-                    <p class="project-description">Here goes the description of the project, what Im able to do and what I did in that ocasion, explain that clearly</p>
+                    <p class="project-description">Soon...</p>
                     <span class="fa-stack fa-3x">
                         <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i>
                         <i class="fa-solid fa-solid fa-briefcase fa-stack-1x fa-inverse" id="project-icon"></i>
@@ -120,7 +119,7 @@
                 </div>
                 <div class="project-article">
                     <p class="project-title">My Behance</p>
-                    <p class="project-description">Some UI/UX designs I've done along the way</p>
+                    <p class="project-description">Some UI/UX designs I've done along the way. Soon...</p>
                     <span class="fa-stack fa-3x">
                         <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i>
                         <i class="fa-solid fa-palette fa-stack-1x fa-inverse" id="project-icon"></i>
