--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
                 </span>
                 <span class="fa-stack fa-1x">
                     <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
-                    <i class="fa-solid fa-brands fa-github fa-stack-1x fa-inverse" id="project-icon-footer"></i>
+                    <a href="https://github.com/galovdev"><i class="fa-solid fa-brands fa-github fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
                 </span>
                 <span class="fa-stack fa-1x">
                     <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
-                    <i class="fa-solid fa-solid fa-envelope fa-stack-1x fa-inverse" id="project-icon-footer"></i>
+                    <a href="mailto:contact@galov.dev"><i class="fa-solid fa-solid fa-envelope fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
                 </span>
             </div>
 
