--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <div class="nav-container">
 
                         <div class="nav-logo">
-                            <a href="index.html"><i id="bracket-logo" class="fa-solid fa-code fa-2x"></i></a>
+                            <a href="#mainsection"><i id="bracket-logo" class="fa-solid fa-code fa-2x"></i></a>
                         </div>
 
                         <div class="nav-links">
                             <ul>
-                                <li><a href="index.html" class="nav-btn">Home</a></li>
+                                <li><a href="#mainsection" class="nav-btn">Home</a></li>
                                 <li><a href="#aboutsection" class="nav-btn">About</a></li>
                                 <li><a href="#projectssection" class="nav-btn">Projects</a></li>
                                 <li><a href="#contactsection" class="nav-btn" id="contact-nav-btn">Contact</a></li>
@@ -34,7 +34,7 @@
 
         </header>
 
-        <main class="main-container">
+        <main id="mainsection" class="main-container">
 
             <div class="main-info-container">
 
@@ -157,7 +157,7 @@
         <footer class="footer-container">
 
             <div class="footer-logo-container">
-                <a href="index.html"><i id="bracket-logo-footer" class="fa-solid fa-code fa-2x"></i></a>
+                <a href="#mainsection"><i id="bracket-logo-footer" class="fa-solid fa-code fa-2x"></i></a>
             </div>
 
             <div class="footer-links">
