added some links

--- a/index.html
+++ b/index.html
@@ -161,6 +161,15 @@
             </div>
 
             <div class="footer-links">
+
+                <span class="fa-stack fa-1x">
+                    <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
+                    <a href="mailto:contact@galov.dev"><i class="fa-solid fa-solid fa-file fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
+                </span>
+                <span class="fa-stack fa-1x">
+                    <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
+                    <a href="https://www.behance.net/galovega"><i class="fa-solid fa-brands fa-behance fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
+                </span>
                 <span class="fa-stack fa-1x">
                     <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
                     <i class="fa-solid fa-brands fa-linkedin-in fa-stack-1x fa-inverse" id="project-icon-footer"></i>
@@ -173,6 +182,9 @@
                     <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
                     <a href="mailto:contact@galov.dev"><i class="fa-solid fa-solid fa-envelope fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
                 </span>
+
+
+
             </div>
 
         </footer>
