--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                 </div>
                 <div class="project-article">
                     <p class="project-title">My Behance</p>
-                    <p class="project-description">Some UI/UX designs I've done along the way. Soon...</p>
+                    <p class="project-description">My UI/UX designs</p>
                     <span class="fa-stack fa-3x">
-                        <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i>
+                        <a href="https://www.behance.net/galovega"><i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i></a>
                         <i class="fa-solid fa-palette fa-stack-1x fa-inverse" id="project-icon"></i>
                     </span>
                     
@@ -164,7 +164,7 @@
 
                 <span class="fa-stack fa-1x">
                     <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
-                    <a href="mailto:contact@galov.dev"><i class="fa-solid fa-solid fa-file fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
+                    <a href="https://read.cv/galovdev"><i class="fa-solid fa-solid fa-file fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
                 </span>
                 <span class="fa-stack fa-1x">
                     <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
@@ -214,7 +214,7 @@
             <script>
                 var typed = new Typed('#typed', {
                 stringsElement: '#typed-strings',
-                typeSpeed: 80,
+                typeSpeed: 60,
                 backSpeed: 0,
                 });
             </script>
