--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
 
                 </div>
                 <div class="project-article">
-                    <p class="project-title">My Behance</p>
+                    <a class="project-title" href="https://www.behance.net/galovega"><p class="project-title">My Behance</p></a>
                     <p class="project-description">My UI/UX designs</p>
                     <span class="fa-stack fa-3x">
                         <a href="https://www.behance.net/galovega"><i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i></a>
-                        <i class="fa-solid fa-palette fa-stack-1x fa-inverse" id="project-icon"></i>
+                        <a href="https://www.behance.net/galovega"><i class="fa-solid fa-palette fa-stack-1x fa-inverse" id="project-icon"></i></a>
                     </span>
                     
                 </div>
