--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                 <span class="fa-stack fa-1x">
                     <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
-                    <a href="https://read.cv/galovdev"><i class="fa-solid fa-solid fa-file fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
+                    <a href=><i class="fa-solid fa-solid fa-file fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
                 </span>
                 <span class="fa-stack fa-1x">
                     <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
