added descriptions and links

--- a/index.html
+++ b/index.html
@@ -91,38 +91,38 @@
             <div class="projects-container">
                 
                 <div class="project-article">
-                    <p class="project-title">Ecommerce</p>
-                    <p class="project-description">Soon...</p>
-                    <span class="fa-stack fa-3x">
-                        <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i>
-                        <i class="fa-solid fa-solid fa-shop fa-stack-1x fa-inverse" id="project-icon"></i>
-                    </span>
-
-                </div>
-                <div class="project-article">
                     <p class="project-title">Blog</p>
-                    <p class="project-description">Soon...</p>
+                    <p class="project-description">Website to promote a blogging site, with a simple and clean style.</p>
                     <span class="fa-stack fa-3x">
-                        <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i>
-                        <i class="fa-solid fa-solid fa-newspaper fa-stack-1x fa-inverse" id="project-icon"></i>
+                        <a href="https://blognow-pied.vercel.app/" target="_blank"><i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i></a>
+                        <a href="https://blognow-pied.vercel.app/" target="_blank"><i class="fa-solid fa-solid fa-shop fa-stack-1x fa-inverse" id="project-icon"></i></a>
                     </span>
 
                 </div>
                 <div class="project-article">
-                    <p class="project-title">Business</p>
-                    <p class="project-description">Soon...</p>
+                    <p class="project-title">Art Portfolio</p>
+                    <p class="project-description">Portfolio for an artist, to show her work, store and contact information.</p>
                     <span class="fa-stack fa-3x">
-                        <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i>
-                        <i class="fa-solid fa-solid fa-briefcase fa-stack-1x fa-inverse" id="project-icon"></i>
+                        <a href="https://art-portfolio-three-pink.vercel.app/" target="_blank"><i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i></a>
+                        <a href="https://art-portfolio-three-pink.vercel.app/" target="_blank"><i class="fa-solid fa-solid fa-newspaper fa-stack-1x fa-inverse" id="project-icon"></i></a>
+                    </span>
+
+                </div>
+                <div class="project-article">
+                    <p class="project-title">Tourism Site</p>
+                    <p class="project-description">A website to promote tourism in the state of Querétaro.</p>
+                    <span class="fa-stack fa-3x">
+                        <a href="https://queretaro-travel-xbe3.vercel.app/" target="_blank"><i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i></a>
+                        <a href="https://queretaro-travel-xbe3.vercel.app/" target="_blank"><i class="fa-solid fa-solid fa-briefcase fa-stack-1x fa-inverse" id="project-icon"></i></a>
                     </span>
 
                 </div>
                 <div class="project-article">
                     <a class="project-title" href="https://www.behance.net/galovega"><p class="project-title">My Behance</p></a>
-                    <p class="project-description">My UI/UX designs</p>
+                    <p class="project-description">My UI and UX design portfolio.</p>
                     <span class="fa-stack fa-3x">
-                        <a href="https://www.behance.net/galovega"><i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i></a>
-                        <a href="https://www.behance.net/galovega"><i class="fa-solid fa-palette fa-stack-1x fa-inverse" id="project-icon"></i></a>
+                        <a href="https://www.behance.net/galovega" target="_blank"><i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i></a>
+                        <a href="https://www.behance.net/galovega" target="_blank"><i class="fa-solid fa-palette fa-stack-1x fa-inverse" id="project-icon"></i></a>
                     </span>
                     
                 </div>
@@ -156,34 +156,36 @@
 
         <footer class="footer-container">
 
-            <div class="footer-logo-container">
-                <a href="#mainsection"><i id="bracket-logo-footer" class="fa-solid fa-code fa-2x"></i></a>
-            </div>
-
             <div class="footer-links">
 
-                <span class="fa-stack fa-1x">
-                    <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
-                    <a href=><i class="fa-solid fa-solid fa-file fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
-                </span>
-                <span class="fa-stack fa-1x">
-                    <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
-                    <a href="https://www.behance.net/galovega"><i class="fa-solid fa-brands fa-behance fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
-                </span>
-                <span class="fa-stack fa-1x">
-                    <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
-                    <i class="fa-solid fa-brands fa-linkedin-in fa-stack-1x fa-inverse" id="project-icon-footer"></i>
-                </span>
-                <span class="fa-stack fa-1x">
-                    <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
-                    <a href="https://github.com/galovdev"><i class="fa-solid fa-brands fa-github fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
-                </span>
-                <span class="fa-stack fa-1x">
-                    <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
-                    <a href="mailto:contact@galov.dev"><i class="fa-solid fa-solid fa-envelope fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
-                </span>
+                <div class="footer-logo-container">
+                    <a href="#mainsection"><i id="bracket-logo-footer" class="fa-solid fa-code fa-2x"></i></a>
+                </div>
 
+                <div class="footer-links">
 
+                    <span class="fa-stack fa-1x">
+                        <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
+                        <a href=><i class="fa-solid fa-solid fa-file fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
+                    </span>
+                    <span class="fa-stack fa-1x">
+                        <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
+                        <a href="https://www.behance.net/galovega"><i class="fa-solid fa-brands fa-behance fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
+                    </span>
+                    <span class="fa-stack fa-1x">
+                        <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
+                        <i class="fa-solid fa-brands fa-linkedin-in fa-stack-1x fa-inverse" id="project-icon-footer"></i>
+                    </span>
+                    <span class="fa-stack fa-1x">
+                        <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
+                        <a href="https://github.com/galovdev"><i class="fa-solid fa-brands fa-github fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
+                    </span>
+                    <span class="fa-stack fa-1x">
+                        <i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg-footer"></i>
+                        <a href="mailto:contact@galov.dev"><i class="fa-solid fa-solid fa-envelope fa-stack-1x fa-inverse" id="project-icon-footer"></i></a>
+                    </span>
+
+                </div>
 
             </div>
 
