--- a/index.html
+++ b/index.html
@@ -91,24 +91,13 @@
         <div class="projects-container">
             
             <div class="project-article blog">
-                <a href="https://blognow-pied.vercel.app/" target="_blank">
+                <a href="https://blognow-qkl4.vercel.app/" target="_blank">
                 <p class="project-title">Blog</p> </a>
-                <a href="https://blognow-pied.vercel.app/" target="_blank">
-                <p class="project-description">Website to promote a blogging site, with a simple and clean style.</p> </a>
+                <a href="https://blognow-qkl4.vercel.app/" target="_blank">
+                <p class="project-description">Site to promote a blogging site, with a simple and clean style.</p> </a>
                 <span class="fa-stack fa-3x">
-                    <a href="https://blognow-pied.vercel.app/" target="_blank"><i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i></a>
-                    <a href="https://blognow-pied.vercel.app/" target="_blank"><i class="fa-solid fa-solid fa-pen fa-stack-1x fa-inverse" id="project-icon"></i></a>
-                </span>
-            </div>
-
-            <div class="project-article portfolio">
-                <a href="https://art-portfolio-three-pink.vercel.app/" target="_blank">
-                <p class="project-title">Art Portfolio</p> </a>
-                <a href="https://art-portfolio-three-pink.vercel.app/" target="_blank">
-                <p class="project-description">Portfolio for an artist, to show her work, store and contact information.</p> </a>
-                <span class="fa-stack fa-3x">
-                    <a href="https://art-portfolio-three-pink.vercel.app/" target="_blank"><i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i></a>
-                    <a href="https://art-portfolio-three-pink.vercel.app/" target="_blank"><i class="fa-solid fa-solid fa-briefcase fa-stack-1x fa-inverse" id="project-icon"></i></a>
+                    <a href="https://blognow-qkl4.vercel.app/" target="_blank"><i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i></a>
+                    <a href="https://blognow-qkl4.vercel.app/" target="_blank"><i class="fa-solid fa-solid fa-pen fa-stack-1x fa-inverse" id="project-icon"></i></a>
                 </span>
             </div>
 
@@ -123,6 +112,19 @@
                 </span>
             </div>
             
+
+            <div class="project-article portfolio">
+                <a href="https://art-portfolio-three-pink.vercel.app/" target="_blank">
+                <p class="project-title">Soon...</p> </a>
+                <a href="https://art-portfolio-three-pink.vercel.app/" target="_blank">
+                <p class="project-description">A Portfolio for an artist, to show her work, store and contact information.</p> </a>
+                <span class="fa-stack fa-3x">
+                    <a href="https://art-portfolio-three-pink.vercel.app/" target="_blank"><i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i></a>
+                    <a href="https://art-portfolio-three-pink.vercel.app/" target="_blank"><i class="fa-solid fa-solid fa-briefcase fa-stack-1x fa-inverse" id="project-icon"></i></a>
+                </span>
+            </div>
+
+
             <div class="project-article behance">
                 <a class="project-title" href="https://www.behance.net/galovega">
                 <p class="project-title">My Behance</p> </a>
