--- a/index.html
+++ b/index.html
@@ -40,16 +40,8 @@
                     <h1 id="main-h1">Hi !<br> <span id="span-h1">My name is Galo</span> </h1>
                 </div> 
 
-                <div class="wrapper">
-                    <div class="static-txt">I'm a Software</div>
-                    <ul class="dynamic-txt">
-                        <li><span>Engineer</span></li>
-                        <li><span>Developer</span></li>
-                        <li><span>Creative</span></li>
-                        <li><span>Designer</span></li>
-                        <li><span >Architect</span></li>
-                    </ul>
-                    </div>
+                <div class="engineer">
+                    <div class="static-text">I'm a Software <span class="type"></span></div>
                 </div>
             </div>
 
@@ -226,6 +218,20 @@
             typeSpeed: 60,
             backSpeed: 0,
             });
+            </script>
+
+            <script src="typed.js"></script>
+            <script>
+                var typed = new Typed('.type', {
+                strings: ['Engineer', 
+                          'Developer',
+                          'Creative',
+                          'Designer',
+                          'Architect'],
+                typeSpeed: 70,
+                backSpeed: 40,
+                loop: true
+                });
             </script>
             
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
