ty[ing problem solved

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div> 
 
                 <div class="engineer">
-                    <div class="static-text">I'm a Software <span class="type"></span></div>
+                    <div class="static-text">I'm a Software <span class="typed"></span></div>
                 </div>
             </div>
 
@@ -222,14 +222,14 @@
 
             <script src="typed.js"></script>
             <script>
-                var typed = new Typed('.type', {
+                var typed = new Typed('.typed', {
                 strings: ['Engineer', 
                           'Developer',
                           'Creative',
                           'Designer',
                           'Architect'],
-                typeSpeed: 70,
-                backSpeed: 45,
+                typeSpeed: 80,
+                backSpeed: 50,
                 loop: true
                 });
             </script>
