updated some words

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="about-container">
 
             <div class="about-info">
-                <p class="about-description">Hello! My name is <span class="about-name">Galo Vega</span> I enjoy creating clean and beautiful websites with outstanding UIs/UXs. My interest in web development started back in 2021 when I started studying software development. I love to be able to bring my ideas to reality and help others to do it. </p>
+                <p class="about-description">Hello! My name is <span class="about-name">Galo Vega</span> I enjoy creating clean and beautiful websites with outstanding UIs/UXs. My interest in web development started back in 2021 when I started learning about software development. I love to be able to bring my ideas to reality and help others to do it. </p>
                 <p class="about-subtitle">Frontend</p>
                 <p class="about-description">I craft beautiful websites using HTML, CSS and JavaScript using clean, elegant and efficient code.</p>
                 <p class="about-subtitle">Design</p>
@@ -125,7 +125,6 @@
                     <a href="https://www.behance.net/galovega" target="_blank"><i class="fa-solid fa-circle fa-stack-2x" id="project-icon-bg"></i></a>
                     <a href="https://www.behance.net/galovega" target="_blank"><i class="fa-solid fa-palette fa-stack-1x fa-inverse" id="project-icon"></i></a>
                 </span>
-                
             </div>
         </div>
     </section>
